--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,12 @@
     <string name="kitob_o_qish">Kitob o\'qish</string>
     <string name="ok">OK</string>
     <string name="set">Set</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="this_is_a_car">This is a car</string>
+    <string name="azizbek">Azizbek</string>
+    <string name="channel">Channel</string>
+    <string name="group">Group</string>
+    <string name="chat">Chat</string>
 
 
     <string-array name="fullNames">
