--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="azizbek">Azizbek</string>
     <string name="channel">Channel</string>
     <string name="group">Group</string>
-    <string name="chat">Chat</string>
+    <string name="chat">Chat title long</string>
     <string name="title">title</string>
     <string name="football_gamers">Football gamers</string>
     <string name="gerrard_title">Steven Gerrard</string>
