--- a/app/src/main/res/values-sah-rRU/strings.xml
+++ b/app/src/main/res/values-sah-rRU/strings.xml
@@ -1,5 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Layouts</string>
+
 
     <string name="settings">Settings</string>
     <string name="about">About</string>
@@ -79,40 +81,7 @@
     <string name="this_is_listview">This is listview</string>
 
 
-    <string-array name="fullNames">
-        <item>Mahmudjanov Azizbek</item>
-        <item>Sharifxo\'jayev Muhammadaziz</item>
-        <item>Tohirbekov Doniyor</item>
-        <item>Abdullayev Abrorbek</item>
-        <item>Akbaraliyev Nuriddin</item>
-        <item>Qodirjanov Abubakr</item>
-        <item>Abduraimov Umarbek</item>
-        <item>Hakimov Jobirxon</item>
-        <item>Abubakriddinov Shahriyor</item>
-        <item>Ubaydullayev Avazbek</item>
-    </string-array>
-
-    <string-array name="phoneNumbers">
-        <item>+998932685006</item>
-        <item>+998940581317</item>
-        <item>+998913488875</item>
-        <item>+998999888976</item>
-        <item>+998931765224</item>
-        <item>+998931997672</item>
-        <item>+998913467402</item>
-        <item>+998907547744</item>
-        <item>+998938764422</item>
-        <item>+998941575855</item>
-    </string-array>
-
-    <string-array name="colors">
-        <item></item>
-
-    </string-array>
-
-
-    <!--Locale-->
-    <string name="locale_title">Kitob</string>
+    <string name="locale_title">Книга</string>
     <string name="uz">UZ</string>
     <string name="kr">KR</string>
     <string name="en">EN</string>
